# programmiersprachen-raytracer

./: .gitignore  CMakeLists.txt  example.sdf  scene_1.sdf
.github/workflows/: main.yml
framework/: CMakeLists.txt  HitPoint.hpp  Ray.hpp  box.cpp  box.hpp  camera.cpp  camera.hpp  color.hpp  hit_point.hpp  hitpoint.cpp  hitpoint.hpp  light.cpp  light.hpp  material.cpp  material.hpp  ppmwriter.hpp  punktlichtquelle.hpp  ray.cpp  ray.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  sdf_reader.cpp  sdf_reader.hpp  shape.cpp  shape.hpp  sphere.cpp  sphere.hpp
res/: .scene01.sdf.swp  a0000.sdf  a0001.sdf  k0002.sdf  k0003.sdf  k0004.sdf  k0005.sdf  k0006.sdf  k0007.sdf  k0008.sdf  k0009.sdf  renderall.bat  renderall.sh  rsg.py  scene.props  scene01.ppm  scene01.sdf  try2.ppm
source/: CMakeLists.txt  raytracer.cpp  sceneryread.cpp  tests.cpp
